@@ -1,3 +1,4 @@
+* Add ability to specify ports to open for each node of the testnet
 * Add tmux, iperf3 and openssh-server to lighthouse and prysm images
 * Add Artemis support
 * Add support for mounting volumes on nodes of the tesnet
